syntax = "proto3";
package spotify.vectors.v1;
option java_package = "com.spotify.vectors.v1.proto";
option java_multiple_files = true;
option java_outer_classname = "VectorProtos";

enum DistanceMeasure {
    UNKNOWN = 0;
    COSINE = 1;
    DOT_PRODUCT = 2;
    EUCLIDEAN = 3;
}

message Vector {
    string uri = 1;
    repeated float vector = 2;
}

message GetVectorsRequest {
    repeated string uris = 1;
    bool exclude_estimated_vectors = 2;
    string model = 3;
    string batch = 4;
    string user_vector_type = 5;
}

message GetVectorsResponse {
    string model = 1;
    string batch = 2;
    DistanceMeasure distance_measure = 3;
    repeated Vector vectors = 4;
}

service Vectors {
  rpc GetVectors(GetVectorsRequest) returns (GetVectorsResponse) {}
}
